# cache-management

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/modules/: DetectAndRegisterPlatformMacros.cmake  DetermineCompiler.cmake  GitVersionTracking.cmake  GitVersionTracking.script.cmake  SetupTarget.cmake
libs/: CMakeLists.txt
src/: CMakeLists.txt  cachemgr.cpp  cachemgr.hpp  config.cpp  config.hpp  main.cpp  os_utils.cpp  os_utils.hpp
src/app/: CMakeLists.txt  config.cpp  main.cpp
src/cachemgr/: CMakeLists.txt  basic_utils_logger.hpp  cli_opts.hpp  main.cpp
src/libcachemgr/: CMakeLists.txt  cache_mapping.hpp  cachemgr.cpp  cachemgr.hpp  config.cpp  config.hpp  config_helper.hpp  git_version.hpp.in  libcachemgr.cpp  libcachemgr.hpp  logging.cpp  logging.hpp  macros.hpp  messages.hpp  types.hpp
src/libcachemgr/database/: cache_db.cpp  cache_db.hpp  cache_db_private.hpp  model_formatter.hpp  models.hpp
src/libcachemgr/database/private/: cache_db_private.cpp  cache_db_private.hpp
src/libcachemgr/fs_watcher/: fs_watcher.cpp
src/libcachemgr/fs_watcher/backends/: inotify.cpp
src/libcachemgr/package_manager_support/: pm_base.hpp  pm_registry.cpp  pm_registry.hpp  pm_template.cpp.in  pm_template.hpp.in
src/libcachemgr/package_manager_support/cargo/: cargo.cpp  cargo.hpp
src/libcachemgr/package_manager_support/composer/: composer.cpp  composer.hpp
src/libcachemgr/package_manager_support/go/: go.cpp  go.hpp
src/libcachemgr/package_manager_support/npm/: npm.cpp  npm.hpp
src/libcachemgr/package_manager_support/pub/: pub.cpp  pub.hpp
src/utils/: CMakeLists.txt  datetime_utils.cpp  datetime_utils.hpp  fs_utils.cpp  fs_utils.hpp  logging_helper.cpp  logging_helper.hpp  number_utils.cpp  number_utils.hpp  os_utils.cpp  os_utils.hpp  types.hpp  xdg_paths.cpp  xdg_paths.hpp
src/utils/freedesktop/: os-release.cpp  os-release.hpp  xdg_paths.cpp  xdg_paths.hpp
src/utils/types/: file_size_units.hpp  pointer.hpp
test/: CMakeLists.txt  database_test.cpp  main_test.cpp  test-main.cpp  test_helpers.hpp
test/assets/: missing-sequence.yaml  non-unique-ids.yaml  os-release-test.txt  test.yaml  wrong-data-type.yaml
test/assets/pm/composer/invalid/: composer.json
test/assets/pm/composer/no-cache-dir/: composer.json
test/assets/pm/composer/valid/: composer.json
test/libcachemgr_test/: config_test.cpp
test/package_manager_support_test/: composer_test.cpp  composer_test_cache_dir.cpp  go_test.cpp  npm_test.cpp  pub_test.cpp
test/utils_test/: os_utils_test.cpp  xdg_paths_test.cpp
test/utils_test/freedesktop_test/: os-release_test.cpp  xdg_paths_test.cpp
tools/: package-src-archive.sh
